// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Unit  should render duration in hours 1`] = `
<Unit
  unit="milliseconds"
  value={3600001}
>
  <Duration
    value={3600001}
  >
    1.00 h
  </Duration>
</Unit>
`;

exports[`Unit  should render duration in minutes 1`] = `
<Unit
  unit="milliseconds"
  value={60001}
>
  <Duration
    value={60001}
  >
    1.00 m
  </Duration>
</Unit>
`;

exports[`Unit  should render duration in seconds 1`] = `
<Unit
  unit="milliseconds"
  value={1001}
>
  <Duration
    value={1001}
  >
    1.00 s
  </Duration>
</Unit>
`;

exports[`Unit  should render percent 1`] = `
<Unit
  unit="percent"
  value={20}
>
  <Percent
    value={20}
  >
    20.00%
  </Percent>
</Unit>
`;

exports[`Unit  should render percent floor 1`] = `
<Unit
  unit="percent"
  value={0.00001}
>
  <Percent
    value={0.00001}
  >
    &lt; 0.01%
  </Percent>
</Unit>
`;

exports[`Unit  should render size in GB 1`] = `
<Unit
  unit="bytes"
  value={1074000001}
>
  <Size
    value={1074000001}
  >
    1.00 GB
  </Size>
</Unit>
`;

exports[`Unit  should render size in KB 1`] = `
<Unit
  unit="bytes"
  value={1025}
>
  <Size
    value={1025}
  >
    1.00 KB
  </Size>
</Unit>
`;

exports[`Unit  should render size in MB 1`] = `
<Unit
  unit="bytes"
  value={1049001}
>
  <Size
    value={1049001}
  >
    1.00 MB
  </Size>
</Unit>
`;

exports[`Unit  should render size in TB 1`] = `
<Unit
  unit="bytes"
  value={1100000000001}
>
  <Size
    value={1100000000001}
  >
    1.00 TB
  </Size>
</Unit>
`;

exports[`Unit  should render when not a number 1`] = `
<Unit
  value="not a number"
>
  not a number
</Unit>
`;

exports[`Unit  should render when undefined 1`] = `<Unit />`;
